erDiagram
    users ||--o{ user_roles : has
    roles ||--o{ user_roles : assigned_to
    users ||--o{ accounts : owns
    users ||--o{ audit_logs : generates
    accounts ||--o{ transactions : sends
    accounts ||--o{ transactions : receives

    users {
        int user_id
        varchar username
        varchar password_hash
        varchar email
        varchar first_name
        varchar last_name
        timestamp created_at
        timestamp last_login
        boolean is_active
    }

    roles {
        int role_id
        varchar role_name
        text description
    }

    user_roles {
        int user_id
        int role_id
        timestamp assigned_at
    }

    accounts {
        int account_id
        int user_id
        varchar account_number
        enum account_type
        decimal balance
        varchar currency
        timestamp created_at
        boolean is_active
    }

    transactions {
        int transaction_id
        int from_account_id
        int to_account_id
        decimal amount
        varchar currency
        enum transaction_type
        enum status
        text description
        timestamp created_at
        timestamp completed_at
    }

    audit_logs {
        int log_id
        int user_id
        varchar action_type
        text action_description
        varchar ip_address
        timestamp created_at
    }
